# Interpreter-WebServer

./: CMakeLists.txt  README.md
docs/: intepreter.md
root/: 1.html  403.html  404.html  chat.html  index.html  login.html
root/js/: chat.js  login.js
scripts/: script.txt  script_store.txt
src/: buffer.cpp  db_connectionpool.h  http_connection.cpp  http_connection.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  http_types.h  log.h  main.cpp  server.cpp  server.h  threadpool.cpp  threadpool.h  timer.cpp  timer.h
src/interpreter/: environment.cpp  environment.h  func.cpp  func.h  interpreter.cpp  interpreter.h  types.h
src/interpreter/ASTnodes/: ASTnode.h  BLOCKnode.cpp  BLOCKnode.h  CALLnode.cpp  CALLnode.h  IFnode.cpp  IFnode.h  NUMnode.cpp  NUMnode.h  OPnode.cpp  OPnode.h  RECVnode.cpp  RECVnode.h  SENDnode.cpp  SENDnode.h  SETnode.cpp  SETnode.h  STRnode.cpp  STRnode.h  VARnode.cpp  VARnode.h  VariantNode.cpp  VariantNode.h
src/lib/: buffer.cpp  buffer.h  db_connectionpool.cpp  db_connectionpool.h  epoller.cpp  epoller.h  http_connection.cpp  http_connection.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  http_types.h  log.cpp  log.h  router.cpp  router.h  serverbase.cpp  serverbase.h  threadpool.cpp  threadpool.h  timer.cpp  timer.h
src/utils/: chat_handler.cpp  chat_handler.h  login_handler.cpp  login_handler.h  session.cpp  session.h
tests/: CMakeLists.txt  locustTest.py  test_buffer.cpp  test_chat.cpp  test_db_connectionpool.cpp  test_http_connection.cpp  test_http_request.cpp  test_http_response.cpp  test_intepreter.cpp  test_interpreter_stub.cpp  test_log.cpp  test_login.cpp  test_router.cpp  test_threadpool.cpp  test_timer.cpp
tests/stubs/: dbpool_stub.cpp  environment_stub.cpp  interpreter_stub.cpp  session_stub.cpp
tests/test_scripts/: test1.txt  test2.txt
